# pig-pen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  check-pig-pen-updates.sh
.github/workflows/: build.yml
.sqlx/: database.json
example-random-strategy/: Cargo.toml
example-random-strategy/src/: bindings.rs  lib.rs
example-random-strategy/wit/: strategy.wit
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  tailwind-output.css
frontend/src/components/: Arena.tsx  BotDocumentation.tsx  BotList.tsx  BotUpload.tsx  Navigation.tsx  Rules.tsx  SimulationControl.tsx  SimulationDetails.tsx  SimulationHistory.tsx  SimulationMonitor.tsx
frontend/src/services/: api.ts
src/: api.rs  db.rs  game.rs  lib.rs  main.rs  simulation.rs
wit/: strategy.wit
