[package]
name = "pig-pen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
wasmtime = { version = "36.0.2", features = ["component-model"] }
wasmtime-wasi = "36.0.2"
wit-bindgen = "0.46.0"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
