[package]
name = "random-strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "pig-pen:player"

[package.metadata.component.dependencies]
